--- a/game.html
+++ b/game.html
@@ -38,5 +38,22 @@
             </tr>
 
         </table>
+        <form>
+        <a id="enter_move">X axis</a> 
+        <select id="movebox">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            </select>
+        <br/>
+        <a id="enter_move">Y axis</a>
+        <select id="movebox">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+    </br>
+    <button type="submit" id="gamesubmit">Submit</button>
+        </form>
     </body>
 </html>
